src/antlr/SequenceDiagramParser.py
# Generated from ./src/antlr/SequenceDiagram.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SequenceDiagramParser ( Parser ):

    grammarFileName = "SequenceDiagram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'participant'", "'call'", "'return'", 
                     "'self'", "'alt'", "'end'", "'else'", "'loop'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "WS" ]

    RULE_sequence = 0
    RULE_statement = 1
    RULE_messageStmt = 2
    RULE_participantDecl = 3
    RULE_callStmt = 4
    RULE_returnStmt = 5
    RULE_selfCallStmt = 6
    RULE_altStmt = 7
    RULE_elseBlock = 8
    RULE_loopStmt = 9
    RULE_condition = 10

    ruleNames =  [ "sequence", "statement", "messageStmt", "participantDecl", 
                   "callStmt", "returnStmt", "selfCallStmt", "altStmt", 
                   "elseBlock", "loopStmt", "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ID=9
    WS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SequenceDiagramParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SequenceDiagramParser.StatementContext)
            else:
                return self.getTypedRuleContext(SequenceDiagramParser.StatementContext,i)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequence" ):
                return visitor.visitSequence(self)
            else:
                return visitor.visitChildren(self)




    def sequence(self):

        localctx = SequenceDiagramParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 318) != 0):
                self.state = 22
                self.statement()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(SequenceDiagramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def participantDecl(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ParticipantDeclContext,0)


        def messageStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.MessageStmtContext,0)


        def altStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.AltStmtContext,0)


        def loopStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.LoopStmtContext,0)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SequenceDiagramParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.participantDecl()
                pass
            elif token in [2, 3, 4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.messageStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.altStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.loopStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessageStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.CallStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ReturnStmtContext,0)


        def selfCallStmt(self):
            return self.getTypedRuleContext(SequenceDiagramParser.SelfCallStmtContext,0)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_messageStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessageStmt" ):
                listener.enterMessageStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessageStmt" ):
                listener.exitMessageStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessageStmt" ):
                return visitor.visitMessageStmt(self)
            else:
                return visitor.visitChildren(self)




    def messageStmt(self):

        localctx = SequenceDiagramParser.MessageStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_messageStmt)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.callStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.returnStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.selfCallStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParticipantDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SequenceDiagramParser.ID)
            else:
                return self.getToken(SequenceDiagramParser.ID, i)

        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_participantDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParticipantDecl" ):
                listener.enterParticipantDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParticipantDecl" ):
                listener.exitParticipantDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParticipantDecl" ):
                return visitor.visitParticipantDecl(self)
            else:
                return visitor.visitChildren(self)




    def participantDecl(self):

        localctx = SequenceDiagramParser.ParticipantDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_participantDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(SequenceDiagramParser.T__0)
            self.state = 42
            self.match(SequenceDiagramParser.ID)
            self.state = 43
            self.match(SequenceDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SequenceDiagramParser.ID)
            else:
                return self.getToken(SequenceDiagramParser.ID, i)

        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_callStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallStmt" ):
                listener.enterCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallStmt" ):
                listener.exitCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallStmt" ):
                return visitor.visitCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def callStmt(self):

        localctx = SequenceDiagramParser.CallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_callStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(SequenceDiagramParser.T__1)
            self.state = 46
            self.match(SequenceDiagramParser.ID)
            self.state = 47
            self.match(SequenceDiagramParser.ID)
            self.state = 48
            self.match(SequenceDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SequenceDiagramParser.ID)
            else:
                return self.getToken(SequenceDiagramParser.ID, i)

        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = SequenceDiagramParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(SequenceDiagramParser.T__2)
            self.state = 51
            self.match(SequenceDiagramParser.ID)
            self.state = 52
            self.match(SequenceDiagramParser.ID)
            self.state = 53
            self.match(SequenceDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelfCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SequenceDiagramParser.ID)
            else:
                return self.getToken(SequenceDiagramParser.ID, i)

        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_selfCallStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelfCallStmt" ):
                listener.enterSelfCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelfCallStmt" ):
                listener.exitSelfCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelfCallStmt" ):
                return visitor.visitSelfCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def selfCallStmt(self):

        localctx = SequenceDiagramParser.SelfCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selfCallStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SequenceDiagramParser.T__3)
            self.state = 56
            self.match(SequenceDiagramParser.ID)
            self.state = 57
            self.match(SequenceDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AltStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SequenceDiagramParser.StatementContext)
            else:
                return self.getTypedRuleContext(SequenceDiagramParser.StatementContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_altStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAltStmt" ):
                listener.enterAltStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAltStmt" ):
                listener.exitAltStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAltStmt" ):
                return visitor.visitAltStmt(self)
            else:
                return visitor.visitChildren(self)




    def altStmt(self):

        localctx = SequenceDiagramParser.AltStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_altStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SequenceDiagramParser.T__4)
            self.state = 60
            self.condition()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 318) != 0):
                self.state = 61
                self.statement()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 67
                self.elseBlock()


            self.state = 70
            self.match(SequenceDiagramParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SequenceDiagramParser.StatementContext)
            else:
                return self.getTypedRuleContext(SequenceDiagramParser.StatementContext,i)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_elseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBlock" ):
                listener.enterElseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBlock" ):
                listener.exitElseBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBlock" ):
                return visitor.visitElseBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseBlock(self):

        localctx = SequenceDiagramParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(SequenceDiagramParser.T__6)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 73
                self.condition()


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 318) != 0):
                self.state = 76
                self.statement()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SequenceDiagramParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SequenceDiagramParser.StatementContext)
            else:
                return self.getTypedRuleContext(SequenceDiagramParser.StatementContext,i)


        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_loopStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStmt" ):
                listener.enterLoopStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStmt" ):
                listener.exitLoopStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStmt" ):
                return visitor.visitLoopStmt(self)
            else:
                return visitor.visitChildren(self)




    def loopStmt(self):

        localctx = SequenceDiagramParser.LoopStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loopStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SequenceDiagramParser.T__7)
            self.state = 83
            self.condition()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 318) != 0):
                self.state = 84
                self.statement()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(SequenceDiagramParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SequenceDiagramParser.ID, 0)

        def getRuleIndex(self):
            return SequenceDiagramParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = SequenceDiagramParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SequenceDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





